<?xml version="1.0"?>
<package format="2">
  <name>r3</name>
  <version>0.0.1</version>
  <description>description</description>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <maintainer email="pkv@cs.cmu.edu">Pras Velagapudi</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <author email="pkv@cs.cmu.edu">Pras Velagapudi</author>
  <license>BSD</license>
  <depend>boost</depend>
  <depend>dart</depend>
  <depend>eigen</depend>
  <depend>ompl</depend>
  <depend>python</depend>
  <!-- This is required by REP-136. -->
  <exec_depend>catkin</exec_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
