<?xml version="1.0"?>
<package format="2">
  <name>aikido</name>
  <version>0.2.0</version>
  <description>description</description>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <maintainer email="pkv@cs.cmu.edu">Pras Velagapudi</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <author email="pkv@cs.cmu.edu">Pras Velagapudi</author>
  <license>BSD</license>
  <depend>boost</depend>
  <depend>dart</depend>
  <depend>eigen</depend>
  <depend>ompl</depend>
  <depend>python</depend>
  <depend>tinyxml2</depend>
  <depend>yaml-cpp</depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>libmicrohttpd</depend>
  <depend>interactive_markers</depend>
  <depend>pr_control_msgs</depend>
  <doc_depend>doxygen</doc_depend>
  <!-- Dependency for building GLPK from source. -->
  <buildtool_depend>automake</buildtool_depend>
  <!-- Workaround to build DART with optional features enabled. -->
  <depend>nlopt</depend>
  <!-- Coveralls dependencies. -->
  <test_depend>curl</test_depend>
  <!-- This is required by REP-136. -->
  <exec_depend>catkin</exec_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>clang-format-3.8</buildtool_depend>
  <buildtool_depend>lcov</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
