<?xml version="1.0"?>
<package format="2">
  <name>aikido</name>
  <version>0.4.0</version>
  <description>description</description>
  <maintainer email="bhou@cs.uw.edu">Brian Hou</maintainer>
  <maintainer email="gilwoo@cs.uw.edu">Gilwoo Lee</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <author email="pkv@cs.cmu.edu">Pras Velagapudi</author>
  <license>BSD</license>

  <!-- Required dependencies -->
  <depend>boost</depend>
  <depend>dartsim</depend>
  <depend>eigen</depend>
  <depend>ompl</depend>
  <depend>python</depend>
  <depend>tinyxml2</depend>
  <depend>yaml-cpp</depend>
  <!-- Workaround to build DART with optional features enabled. -->
  <depend>nlopt</depend>

  <!-- Optional dependencies. Delete these if you don't have them. -->
  <depend>libmicrohttpd</depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pr_control_msgs</depend>
  <depend>octomap_ros</depend>

  <doc_depend>doxygen</doc_depend>

  <!-- Coveralls dependencies. -->
  <test_depend>curl</test_depend>

  <!-- This is required by REP-136. -->
  <exec_depend>catkin</exec_depend>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>lcov</buildtool_depend>

  <export>
    <build_type>cmake</build_type>

    <!-- Optional dependencies. -->
    <optional>libmicrohttpd</optional>
    <optional>roscpp</optional>
    <optional>actionlib</optional>
    <optional>control_msgs</optional>
    <optional>geometry_msgs</optional>
    <optional>interactive_markers</optional>
    <optional>std_msgs</optional>
    <optional>tf</optional>
    <optional>trajectory_msgs</optional>
    <optional>visualization_msgs</optional>
    <optional>pr_control_msgs</optional>
  </export>
</package>
